web-infras/parser/tests/fixtures/esprima/es2017/trailing-commas/invalid-trailing-comma-getter/output.txt
[SyntaxError]: Unexpect trailing comma. (1,17)
1|class A { get x(,) { return 42 } }
 |               ^
